Fix alignment of label and checkbox on filter list screen

--- a/core/app/shell/src/themes/suite8/css/layout/_saved-search.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_saved-search.scss
@@ -27,6 +27,10 @@
 .saved-search-container {
   background-color: $lighter-salmon-pink;
 
+  .checkbox-field {
+    padding-top: 10px;
+  }
+
   .radioenum-input label:before {
     border: .06px solid $coral-pink;
   }
@@ -45,5 +49,9 @@
 
   .radioenum {
     padding-top: 3px;
+  }
+
+  .action-group-menu {
+    margin-top: -3px;
   }
 }
